Support Java 8 for 1.16.5